Changed PATCH response to 200.
